--- a/queue_job/views/queue_job_views.xml
+++ b/queue_job/views/queue_job_views.xml
@@ -289,7 +289,7 @@
     <record id="action_queue_job" model="ir.actions.act_window">
         <field name="name">Jobs</field>
         <field name="res_model">queue.job</field>
-        <field name="view_mode">tree,form,pivot,graph</field>
+        <field name="view_mode">list,form,pivot,graph</field>
         <field name="context">{'search_default_wait_dependencies': 1,
                                'search_default_pending': 1,
                                'search_default_enqueued': 1,
